--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+*.snap
 
 # production
 /build
@@ -21,3 +22,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+/.eslintcache
+package-lock.json
+
+### IntelliJ IDEA ###
+.idea
+
+# VSCode
+.vscode
+
+# My own
+webpack.config.js
+deploy.sh
+craco.config.js
+compress-cra.json
+.storybook
+swiped-events.js
