--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "cards",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://meskal1.github.io/cards",
   "dependencies": {
+    "@craco/craco": "^7.0.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
+    "@mui/system": "^5.10.17",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,10 +18,24 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^1.2.1",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compress-create-react-app": "^1.3.1",
+    "compression-webpack-plugin": "^10.0.0",
+    "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.56.1",
+    "sass-math": "^1.0.0",
     "typescript": "^4.4.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -39,5 +61,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "group-css-media-queries-loader": "^4.3.0",
+    "serve": "^14.1.2"
   }
 }
