--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sass-math": "^1.0.0",
     "typescript": "^4.4.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -87,6 +88,7 @@
     "stylelint": "^14.10.0",
     "stylelint-config-clean-order": "^0.9.0",
     "stylelint-config-css-modules": "^4.1.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-prettier": "^2.0.0"
   }
 }
