--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "stylelint-prettier": "^2.0.0"
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios|react-day-picker)/"
+    ]
   }
 }
