--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_BASE_URL='https://neko-back.herokuapp.com/2.0/'
-REACT_APP_NEW_PASSWORD_URL='https://meskal1.github.io/cards'
+REACT_APP_NEW_PASSWORD_URL='https://meskal1.github.io/cards/'
