--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
     "sass-math": "^1.0.0",
+    "stylelint-scss": "^4.3.0",
     "typescript": "^4.4.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "web-vitals": "^2.1.0",
