--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "brotli-webpack-plugin": "^1.1.0",
     "compress-create-react-app": "^1.3.1",
     "compression-webpack-plugin": "^10.0.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
