--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.2.1",
     "brotli-webpack-plugin": "^1.1.0",
     "compress-create-react-app": "^1.3.1",
@@ -37,6 +38,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
     "sass-math": "^1.0.0",
+    "socket.io-client": "^4.5.4",
     "stylelint-scss": "^4.3.0",
     "typescript": "^4.4.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
